# PointerBooth

./: CMakeLists.txt  README.md  driver.cpp  initialthoughts.txt  main.cpp
lib/include/: ContourFilter.h  Editor.h  Filter.cpp  Filter.h  FilterPackManager.h  GaussianBlurFilter.h  GlitchFilter.h  GrayScaleFilter.h  Image.h  LegacyFilter.h  MatAdapter.h  MatrixFilter.h  OtsuThresholdingFilter.h  Pixel.h  PixelSortFilter.h  PointerBoothWindow.h  ScrambleFilter.h  SimpleBlurFilter.h  VideoEnvironment.h
lib/include/filters/: PointillismFilter.h
lib/src/: ContourFilter.cpp  Editor.cpp  FilterPackManager.cpp  GaussianBlurFilter.cpp  GrayScaleFilter.cpp  Image.cpp  MatAdapter.cpp  MatrixFilter.cpp  OtsuThresholdingFilter.cpp  Pixel.cpp  PointerBoothWindow.cpp  SimpleBlurFilter.cpp  VideoEnvironment.cpp
